Fixed background color

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             body {
                 font-family: 'helvetica neue', sans-serif;
                 padding-bottom: 20px;
-                background-color: #fdfdfd;
+                background-color: #ffffff;
                 color: #1b1914;
             }
             
