Removed cherrytomato links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-<!--[of]:        <style>-->
+<!--[of]:<style>-->
         <style>
             body {
                 font-family: 'helvetica neue', sans-serif;
@@ -124,7 +124,7 @@
     </div>
 
     <div class="container">
-<!--[of]:      <div class="row"> // Productivity versus happiness-->
+<!--[of]:<div class="row"> // Productivity versus happiness-->
       <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
@@ -155,8 +155,6 @@
 		</p>
 		
 		<p>
-			For a while now, I've been studying this topic and I've developed a simple piece of software, <a href="http://www.beatpoints.com/cherrytomato" target="_blank">CherryTomato</a>, 
-			that helps me. 
 			This site is a curated collection of research and techniques. It reflects my personal journey in this field, which is far from over.
 			Links are provided to these resources and unless otherwise stated, they are ones I have read or used, and that I recommend. This site is about what works for me. For instance, I have tried meditating 
 			numerous times without noticing any effect even though countless people (including some that I respect greatly) say that it helps them a lot. I haven't personally experimented with nootropics, even though
@@ -183,7 +181,7 @@
         </div>
       </div>
 <!--[cf]-->
-<!--[of]:      <div class="row"> // Motivation, Commitment and Fear-->
+<!--[of]:<div class="row"> // Motivation, Commitment and Fear-->
       <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
@@ -221,8 +219,8 @@
         <div class="col-lg-8">
             <blockquote>Life is short and engaging in a project or developing a skill takes a lot of time</blockquote>
 		<p>
-			Neil Fiore seems to conclude that fear is the sole reason why people procrastinate. I don't think that is the case. CherryTomato, for instance, is nowhere near what I would like it to be, 
-			but it's out there with bugs and missing features. Even so, I can't seem to pull myself together to update it. Unless I am oblivious to some really deep and hidden issues in my own psyche,
+			Neil Fiore seems to conclude that fear is the sole reason why people procrastinate. I don't think that is the case. My personal page links to many creative endeavours of mine that are nowhere near what I would like them to be, 
+			but they are out there, visible to the world. Unless I am oblivious to some really deep and hidden issues in my own psyche,
 			I often procrastinate simply because my brain decides that a task is not (currently) important enough to bother with. <br />
 			There is one fear I do struggle with from time to time though.
 			In order to be productive, you need to make decisions. You may not be the goal setting type, but you still need to know what you want to be working on, and actually deciding to work on something is the first step. 
@@ -251,7 +249,7 @@
       </div>
 
 <!--[cf]-->
-<!--[of]:	<div class="row"> // Structure-->
+<!--[of]:<div class="row"> // Structure-->
 	<div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
@@ -380,7 +378,7 @@
 	  </div>		
 	</div>
 <!--[cf]-->
-<!--[of]:	<div class="row"> // Flow-->
+<!--[of]:<div class="row"> // Flow-->
 	<div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
@@ -433,9 +431,8 @@
 			Pomodoros are 25 minute intervals with 5 minute breaks and 15 minute breaks for every 4th pomodoro. <br />
 			GTD also uses the concept of a timebox for quick tasks: if something can be done in two minutes or less, you should set aside those two minutes and complete the task right away. <br />
 			
-			CherryTomato is basically a software version of a kitchen timer. Francesco Cirillo prefers a tangible device over software because the manual process of rewinding the timer is
-			a sort of commitment. However, I work in spaces where I don't want to disturb others with the sound which was the initial reason why I made it. I have since implemented a simple analytics
-			feature which asks me to rate each timebox so I can keep track of my productivity. There are many alternatives to CherryTomato out there.
+			Francesco Cirillo prefers a tangible device over software because the manual process of rewinding the timer is
+			a sort of commitment. I find that for me personally, software works just fine.
 		</p>
 		<p>
 			At times I apply what Fabian Till Kruse calls <a href="http://www.friendlyanarchist.com/do-nothing-alternative/" target="_blank">&ldquo;the nothing alternative&rdquo;</a> which implies that your timebox 
@@ -464,7 +461,6 @@
 			When I discussed this with my friend Thomas Blomseth, he decided not to do repeatable patterns but instead create pieces of art by simply adding a dot to his drawing every time. I've been doing this myself for a while now,
 			at 5 minute intervals. It works well because my timeboxes are typically divisible by five minutes, 15 minutes, a pomodoro (25 minutes) or 45 minutes.
 			As a reward, you end up with pieces of art. I am currently keeping different pieces for different projects. <br />
-			I have implemented this into CherryTomato (at the time of writing in a version that is not yet released) but if you want to try it out, there are many timers available around the web.
 		</p>
 		<p>
 			Alright, you've clearly spent too much time here. Now stop consuming and get back to producing!
